feat: use arb subgraph to calculate dynamic boost

--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 121,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -41,14 +41,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:22:48.310505Z",
-     "start_time": "2023-08-01T16:22:48.299589Z"
+     "end_time": "2023-08-01T16:56:30.139033Z",
+     "start_time": "2023-08-01T16:56:30.119571Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 122,
    "outputs": [],
    "source": [
     "from datetime import timedelta\n",
@@ -62,7 +62,7 @@
     "from gql import gql\n",
     "from gql.transport.requests import RequestsHTTPTransport\n",
     "\n",
-    "BALANCER_GRAPH_URL = \"https://api.thegraph.com/subgraphs/name/balancer-labs/balancer-v2\"\n",
+    "BALANCER_GRAPH_URL = \"https://api.thegraph.com/subgraphs/name/balancer-labs/balancer-arbitrum-v2\"\n",
     "\n",
     "# Start date and end date are the following: start date is always previous Thursday 00:00 UTC, end date is always this Thursday 00:00 UTC:\n",
     "today = datetime.today()\n",
@@ -102,8 +102,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:22:52.755415Z",
-     "start_time": "2023-08-01T16:22:48.311568Z"
+     "end_time": "2023-08-01T16:56:34.143961Z",
+     "start_time": "2023-08-01T16:56:30.132554Z"
     }
    }
   },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 123,
    "outputs": [
     {
      "name": "stdout",
@@ -142,8 +142,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:22:52.762220Z",
-     "start_time": "2023-08-01T16:22:52.759049Z"
+     "end_time": "2023-08-01T16:56:34.156468Z",
+     "start_time": "2023-08-01T16:56:34.144486Z"
     }
    }
   },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 126,
    "outputs": [],
    "source": [
     "import os\n",
@@ -220,19 +220,20 @@
     "for gauge_addr, gauge_data in arb_gauges.items():\n",
     "    for pool_snapshot in pool_snapshots:\n",
     "        if pool_snapshot['pool']['symbol'].lower() == gauge_data['symbol'].lower():\n",
-    "            pool_protocol_fees[gauge_addr] = float(pool_snapshot['protocolFee'])"
+    "            protocol_fee = float(pool_snapshot['protocolFee']) if pool_snapshot['protocolFee'] else 0\n",
+    "            pool_protocol_fees[gauge_addr] = protocol_fee"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:22:52.854415Z",
-     "start_time": "2023-08-01T16:22:52.769429Z"
+     "end_time": "2023-08-01T16:58:02.992166Z",
+     "start_time": "2023-08-01T16:58:02.905886Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 127,
    "outputs": [],
    "source": [
     "# Apply boost data to arb gauges\n",
@@ -257,8 +258,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:22:59.815799Z",
-     "start_time": "2023-08-01T16:22:52.856790Z"
+     "end_time": "2023-08-01T16:58:12.615689Z",
+     "start_time": "2023-08-01T16:58:05.142878Z"
     }
    }
   },
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 128,
    "outputs": [
     {
      "name": "stdout",
@@ -286,7 +287,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>distributionInPercent</th>\n      <th>boost</th>\n      <th>capOverride</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x9ab40B6e1330Ce70B9e07cD691f281c1539944E6</td>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>1.267735</td>\n      <td>17274.233568</td>\n      <td>17.734624</td>\n      <td>1.818818</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xb12ADA23eE766bd6b596E2bE556ea2046758b87c</td>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>1.020934</td>\n      <td>14049.919742</td>\n      <td>14.424377</td>\n      <td>1.750000</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.966584</td>\n      <td>13635.807350</td>\n      <td>13.999227</td>\n      <td>1.750000</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>0.934983</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.500000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.796273</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.536536</td>\n      <td>7457.297218</td>\n      <td>7.656048</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x80aed5C5C683FEC86817C98da334DD72424E7297</td>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.490167</td>\n      <td>6697.817061</td>\n      <td>6.876326</td>\n      <td>1.786927</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xacE0D479040231e3c6b17479cFd4444182d521d4</td>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.373075</td>\n      <td>5148.418034</td>\n      <td>5.285633</td>\n      <td>1.750000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.266953</td>\n      <td>3719.332460</td>\n      <td>3.818460</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.209722</td>\n      <td>2965.748190</td>\n      <td>3.044791</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.213185</td>\n      <td>2946.782118</td>\n      <td>3.025319</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x4944b07977A42C15c6a06CF4e204e24c60564104</td>\n      <td>0xCba9Ff45cfB9cE238AfDE32b0148Eb82CbE63562</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.178266</td>\n      <td>2487.831089</td>\n      <td>2.554136</td>\n      <td>1.750000</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.111315</td>\n      <td>1540.013171</td>\n      <td>1.581057</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>distributionInPercent</th>\n      <th>boost</th>\n      <th>capOverride</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x9ab40B6e1330Ce70B9e07cD691f281c1539944E6</td>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>1.221744</td>\n      <td>15952.321186</td>\n      <td>16.377481</td>\n      <td>1.752834</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>1.074313</td>\n      <td>15446.355902</td>\n      <td>15.858030</td>\n      <td>1.945043</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xb12ADA23eE766bd6b596E2bE556ea2046758b87c</td>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>1.028697</td>\n      <td>13790.607169</td>\n      <td>14.158153</td>\n      <td>1.763307</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>1.670377</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>2.679798</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.796760</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.000613</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.538087</td>\n      <td>7425.300818</td>\n      <td>7.623199</td>\n      <td>1.002891</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x80aed5C5C683FEC86817C98da334DD72424E7297</td>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.486390</td>\n      <td>6398.751026</td>\n      <td>6.569290</td>\n      <td>1.773161</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xacE0D479040231e3c6b17479cFd4444182d521d4</td>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.373075</td>\n      <td>5053.092589</td>\n      <td>5.187767</td>\n      <td>1.750000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.268668</td>\n      <td>3730.626395</td>\n      <td>3.830055</td>\n      <td>1.006424</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.215022</td>\n      <td>3110.771491</td>\n      <td>3.193679</td>\n      <td>1.025274</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.213364</td>\n      <td>2902.424727</td>\n      <td>2.979780</td>\n      <td>1.000840</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x4944b07977A42C15c6a06CF4e204e24c60564104</td>\n      <td>0xCba9Ff45cfB9cE238AfDE32b0148Eb82CbE63562</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.186030</td>\n      <td>2594.592809</td>\n      <td>2.663744</td>\n      <td>1.826209</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.111363</td>\n      <td>1518.355889</td>\n      <td>1.558823</td>\n      <td>1.000426</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -365,8 +366,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:22:59.838836Z",
-     "start_time": "2023-08-01T16:22:59.828893Z"
+     "end_time": "2023-08-01T16:58:15.772651Z",
+     "start_time": "2023-08-01T16:58:15.764641Z"
     }
    }
   },
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Export to json\n",
@@ -391,8 +392,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:22:59.858619Z",
-     "start_time": "2023-08-01T16:22:59.837234Z"
+     "start_time": "2023-08-01T16:56:34.257907Z"
     }
    }
   }
