feat: improve dynamic boost calcualtion

--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 65,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -21,7 +21,7 @@
     "    first: {first}\n",
     "    skip: {skip}\n",
     "    orderBy: timestamp\n",
-    "    orderDirection: asc\n",
+    "    orderDirection: desc\n",
     "    where: {{timestamp_gte: {start_ts}, timestamp_lt: {end_ts}}}\n",
     "  ) {{\n",
     "    pool {{\n",
@@ -41,19 +41,19 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:56:30.139033Z",
-     "start_time": "2023-08-01T16:56:30.119571Z"
+     "end_time": "2023-08-03T13:10:08.772467Z",
+     "start_time": "2023-08-03T13:10:08.753805Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 66,
    "outputs": [],
    "source": [
-    "from datetime import timedelta\n",
-    "from datetime import datetime\n",
     "import json\n",
+    "from datetime import datetime\n",
+    "from datetime import timedelta\n",
     "from typing import Dict\n",
     "from typing import List\n",
     "from typing import Optional\n",
@@ -69,12 +69,14 @@
     "# Calculate days until previous Thursday (0 = Monday, 3 = Thursday)\n",
     "days_until_previous_thursday = (today.weekday() - 3) % 7\n",
     "# Calculate start date by subtracting days_until_previous_thursday and setting time to 00:00\n",
-    "start_date = today - timedelta(days=days_until_previous_thursday, hours=today.hour, minutes=today.minute, seconds=today.second, microseconds=today.microsecond)\n",
+    "start_date = today - timedelta(days=days_until_previous_thursday, hours=today.hour, minutes=today.minute,\n",
+    "                               seconds=today.second, microseconds=today.microsecond)\n",
     "# Calculate end date by adding 7 days to the start date\n",
     "end_date = start_date + timedelta(days=7)\n",
     "\n",
     "start_ts = int(start_date.timestamp())\n",
     "end_ts = int(end_date.timestamp())\n",
+    "\n",
     "\n",
     "# Fetch all the data from the balancer subgraph\n",
     "def make_gql_client(url: str) -> Optional[Client]:\n",
@@ -83,27 +85,29 @@
     "        transport=transport, fetch_schema_from_transport=True, execute_timeout=60\n",
     "    )\n",
     "\n",
-    "def get_balancer_pool_snapshots() -> Optional[List[Dict]]:\n",
     "\n",
+    "def get_balancer_pool_snapshots() -> Optional[List[Dict]]:\n",
     "    client = make_gql_client(BALANCER_GRAPH_URL)\n",
     "    all_pools = []\n",
     "    limit = 100\n",
     "    offset = 0\n",
     "    while True:\n",
-    "        result = client.execute(gql(POOLS_SNAPSHOTS_QUERY.format(first=limit, skip=offset, start_ts=start_ts, end_ts=end_ts)))\n",
+    "        result = client.execute(\n",
+    "            gql(POOLS_SNAPSHOTS_QUERY.format(first=limit, skip=offset, start_ts=start_ts, end_ts=end_ts)))\n",
     "        all_pools.extend(result['poolSnapshots'])\n",
     "        offset += limit\n",
     "        if len(result['poolSnapshots']) < limit - 1:\n",
     "            break\n",
     "    return all_pools\n",
     "\n",
+    "\n",
     "pool_snapshots = get_balancer_pool_snapshots()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:56:34.143961Z",
-     "start_time": "2023-08-01T16:56:30.132554Z"
+     "end_time": "2023-08-03T13:10:12.018147Z",
+     "start_time": "2023-08-03T13:10:08.766343Z"
     }
    }
   },
@@ -118,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 67,
    "outputs": [
     {
      "name": "stdout",
@@ -142,8 +146,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:56:34.156468Z",
-     "start_time": "2023-08-01T16:56:34.144486Z"
+     "end_time": "2023-08-03T13:10:12.026170Z",
+     "start_time": "2023-08-03T13:10:12.017010Z"
     }
    }
   },
@@ -158,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 68,
    "outputs": [],
    "source": [
     "import os\n",
@@ -219,26 +223,30 @@
     "# TODO: Doesn't work properly as there can be multiple snapshots per pool per week\n",
     "for gauge_addr, gauge_data in arb_gauges.items():\n",
     "    for pool_snapshot in pool_snapshots:\n",
-    "        if pool_snapshot['pool']['symbol'].lower() == gauge_data['symbol'].lower():\n",
+    "        if Web3.toChecksumAddress(pool_snapshot['pool']['address']) == Web3.toChecksumAddress(gauge_data['pool']):\n",
+    "            # Since snapshots are sorted by timestamp descending, we can just take the first one we find for each pool and break\n",
     "            protocol_fee = float(pool_snapshot['protocolFee']) if pool_snapshot['protocolFee'] else 0\n",
-    "            pool_protocol_fees[gauge_addr] = protocol_fee"
+    "            pool_protocol_fees[gauge_addr] = protocol_fee\n",
+    "            break"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:58:02.992166Z",
-     "start_time": "2023-08-01T16:58:02.905886Z"
+     "end_time": "2023-08-03T13:10:12.176274Z",
+     "start_time": "2023-08-03T13:10:12.033954Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "# Apply boost data to arb gauges\n",
     "vote_weights = {}\n",
     "combined_boost = {}\n",
+    "# Dynamic boost data to print out in the final table\n",
+    "dynamic_boosts = {}\n",
     "# Collect gauge voting weights from the gauge controller on chain\n",
     "for gauge_addr, gauge_data in arb_gauges.items():\n",
     "    weight = gauge_c_contract.functions.gauge_relative_weight(gauge_addr).call() / 1e18 * 100\n",
@@ -248,6 +256,7 @@
     "        dynamic_boost = (pool_protocol_fees.get(gauge_addr, 0) / dollar_value_of_bal_emitted) + 1\n",
     "    else:\n",
     "        dynamic_boost = 1\n",
+    "    dynamic_boosts[gauge_addr] = dynamic_boost\n",
     "    # Now calculate the final boost value, which uses formula - (dynamic boost + fixed boost) - 1\n",
     "    boost = (dynamic_boost + boost_data.get(gauge_addr, 1)) - 1\n",
     "    combined_boost[gauge_addr] = boost\n",
@@ -258,8 +267,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:58:12.615689Z",
-     "start_time": "2023-08-01T16:58:05.142878Z"
+     "end_time": "2023-08-03T13:10:18.685957Z",
+     "start_time": "2023-08-03T13:10:12.179175Z"
     }
    }
   },
@@ -274,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 70,
    "outputs": [
     {
      "name": "stdout",
@@ -287,7 +296,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>distributionInPercent</th>\n      <th>boost</th>\n      <th>capOverride</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x9ab40B6e1330Ce70B9e07cD691f281c1539944E6</td>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>1.221744</td>\n      <td>15952.321186</td>\n      <td>16.377481</td>\n      <td>1.752834</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>1.074313</td>\n      <td>15446.355902</td>\n      <td>15.858030</td>\n      <td>1.945043</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xb12ADA23eE766bd6b596E2bE556ea2046758b87c</td>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>1.028697</td>\n      <td>13790.607169</td>\n      <td>14.158153</td>\n      <td>1.763307</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>1.670377</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>2.679798</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.796760</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.000613</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.538087</td>\n      <td>7425.300818</td>\n      <td>7.623199</td>\n      <td>1.002891</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x80aed5C5C683FEC86817C98da334DD72424E7297</td>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.486390</td>\n      <td>6398.751026</td>\n      <td>6.569290</td>\n      <td>1.773161</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xacE0D479040231e3c6b17479cFd4444182d521d4</td>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.373075</td>\n      <td>5053.092589</td>\n      <td>5.187767</td>\n      <td>1.750000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.268668</td>\n      <td>3730.626395</td>\n      <td>3.830055</td>\n      <td>1.006424</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.215022</td>\n      <td>3110.771491</td>\n      <td>3.193679</td>\n      <td>1.025274</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.213364</td>\n      <td>2902.424727</td>\n      <td>2.979780</td>\n      <td>1.000840</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x4944b07977A42C15c6a06CF4e204e24c60564104</td>\n      <td>0xCba9Ff45cfB9cE238AfDE32b0148Eb82CbE63562</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.186030</td>\n      <td>2594.592809</td>\n      <td>2.663744</td>\n      <td>1.826209</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.111363</td>\n      <td>1518.355889</td>\n      <td>1.558823</td>\n      <td>1.000426</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>1.283021</td>\n      <td>17332.279217</td>\n      <td>17.794217</td>\n      <td>1.751982</td>\n      <td>1.75</td>\n      <td>1.001982</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>1.063143</td>\n      <td>15865.841350</td>\n      <td>16.288696</td>\n      <td>1.956239</td>\n      <td>1.75</td>\n      <td>1.206239</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>1.001391</td>\n      <td>13934.301473</td>\n      <td>14.305677</td>\n      <td>1.751241</td>\n      <td>1.75</td>\n      <td>1.001241</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>1.682963</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>2.722806</td>\n      <td>1.50</td>\n      <td>2.222806</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.791156</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.000916</td>\n      <td>1.00</td>\n      <td>1.000916</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.522390</td>\n      <td>7490.039970</td>\n      <td>7.689664</td>\n      <td>1.003130</td>\n      <td>1.00</td>\n      <td>1.003130</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.483468</td>\n      <td>6587.386075</td>\n      <td>6.762952</td>\n      <td>1.754625</td>\n      <td>1.75</td>\n      <td>1.004625</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.370393</td>\n      <td>5202.547142</td>\n      <td>5.341205</td>\n      <td>1.750000</td>\n      <td>1.75</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.259822</td>\n      <td>3750.759221</td>\n      <td>3.850724</td>\n      <td>1.007053</td>\n      <td>1.00</td>\n      <td>1.007053</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.213773</td>\n      <td>3211.983750</td>\n      <td>3.297589</td>\n      <td>1.026706</td>\n      <td>1.00</td>\n      <td>1.026706</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.211845</td>\n      <td>2990.059868</td>\n      <td>3.069751</td>\n      <td>1.000907</td>\n      <td>1.00</td>\n      <td>1.000907</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.108018</td>\n      <td>1528.435866</td>\n      <td>1.569172</td>\n      <td>1.000684</td>\n      <td>1.00</td>\n      <td>1.000684</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x9ceBf13BB702F253AbF1579294694A1eDAD00EAA</td>\n      <td>bbaUSDC/bbaUSDCe</td>\n      <td>0.002236</td>\n      <td>29.566067</td>\n      <td>0.030354</td>\n      <td>1.000136</td>\n      <td>1.00</td>\n      <td>1.000136</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -314,14 +323,16 @@
     "    # Cap distribution\n",
     "    to_distribute = to_distribute if to_distribute < VOTE_CAPS[gauge_addr] else VOTE_CAPS[gauge_addr]\n",
     "    arb_gauge_distributions[gauge_addr] = {\n",
-    "        'gaugeAddress': gauge_addr,\n",
+    "        # 'gaugeAddress': gauge_addr,\n",
     "        'pool': gauge_data['pool'],\n",
     "        'symbol': gauge_data['symbol'],\n",
     "        'voteWeight': gauge_data['voteWeight'],\n",
     "        'distribution': to_distribute if to_distribute < VOTE_CAPS[gauge_addr] else VOTE_CAPS[gauge_addr],\n",
-    "        'distributionInPercent': to_distribute / ARBITRUM_TO_DISTRIBUTE * 100,\n",
+    "        '%distribution': to_distribute / ARBITRUM_TO_DISTRIBUTE * 100,\n",
     "        'boost': combined_boost.get(gauge_addr, 1),\n",
-    "        'capOverride': f\"{cap_override_data.get(gauge_addr, VOTE_CAP_IN_PERCENT)}%\"\n",
+    "        'staticBoost': boost_data.get(gauge_addr, 1),\n",
+    "        'dynamicBoost': dynamic_boosts.get(gauge_addr, 1),\n",
+    "        'cap': f\"{cap_override_data.get(gauge_addr, VOTE_CAP_IN_PERCENT)}%\"\n",
     "    }\n",
     "\n",
     "\n",
@@ -346,7 +357,7 @@
     "                uncap_gauge['distribution'] + unspent_arb * uncap_gauge['voteWeight'] / total_uncapped_weight,\n",
     "                VOTE_CAPS[a])\n",
     "            uncap_gauge['distribution'] = distribution\n",
-    "            uncap_gauge['distributionInPercent'] = uncap_gauge['distribution'] / ARBITRUM_TO_DISTRIBUTE * 100\n",
+    "            uncap_gauge['%distribution'] = uncap_gauge['distribution'] / ARBITRUM_TO_DISTRIBUTE * 100\n",
     "    # Call recursively if there is still unspent arb\n",
     "    if ARBITRUM_TO_DISTRIBUTE - sum([g['distribution'] for g in arb_gauge_distributions.values()]) > 0:\n",
     "        recur_distribute_unspend_arb()\n",
@@ -360,14 +371,14 @@
     "arb_gauge_distributions = {addr: gauge for addr, gauge in arb_gauge_distributions.items() if\n",
     "                           gauge['distribution'] > 0}\n",
     "arb_gauge_distributions_df = pd.DataFrame.from_dict(arb_gauge_distributions, orient='index')\n",
-    "arb_gauge_distributions_df = arb_gauge_distributions_df.sort_values(by='distributionInPercent', ascending=False)\n",
+    "arb_gauge_distributions_df = arb_gauge_distributions_df.sort_values(by='%distribution', ascending=False)\n",
     "display(HTML(arb_gauge_distributions_df.to_html(index=False)))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-01T16:58:15.772651Z",
-     "start_time": "2023-08-01T16:58:15.764641Z"
+     "end_time": "2023-08-03T13:10:18.711690Z",
+     "start_time": "2023-08-03T13:10:18.698500Z"
     }
    }
   },
@@ -382,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "# Export to json\n",
@@ -392,7 +403,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-01T16:56:34.257907Z"
+     "end_time": "2023-08-03T13:10:18.731912Z",
+     "start_time": "2023-08-03T13:10:18.710676Z"
     }
    }
   }
