feat: fetching snapshots using block heuristics

--- a/notebooks/pool_fees_and_accounting.ipynb
+++ b/notebooks/pool_fees_and_accounting.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -26,6 +26,7 @@
     "    orderBy: timestamp\n",
     "    orderDirection: desc\n",
     "    block: {{ number: {block} }}\n",
+    "    where: {{ protocolFee_not: null }}\n",
     "  ) {{\n",
     "    pool {{\n",
     "      address\n",
@@ -42,42 +43,40 @@
     "\"\"\""
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-10T15:31:17.092810Z",
+     "start_time": "2023-08-10T15:31:17.085391Z"
+    }
    },
    "id": "abc722b4fa453b5a"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
-    "\n",
-    "from datetime import datetime\n",
-    "from datetime import timedelta\n",
+    "import os\n",
     "from typing import Dict\n",
     "from typing import List\n",
     "from typing import Optional\n",
     "\n",
+    "from dotenv import load_dotenv\n",
     "from gql import Client\n",
     "from gql import gql\n",
     "from gql.transport.requests import RequestsHTTPTransport\n",
+    "from web3 import Web3\n",
     "\n",
+    "load_dotenv()\n",
+    "web3 = Web3(Web3.HTTPProvider(os.environ[\"ETHNODEURL\"]))\n",
     "BALANCER_GRAPH_URL = \"https://api.thegraph.com/subgraphs/name/balancer-labs/balancer-arbitrum-v2\"\n",
     "\n",
-    "# Start date and end date are the following: start date is always previous Thursday 00:00 UTC, end date is always this Thursday 00:00 UTC:\n",
-    "today = datetime.today()\n",
-    "# Calculate days until previous Thursday (0 = Monday, 3 = Thursday)\n",
-    "days_until_previous_thursday = (today.weekday() - 3) % 7\n",
-    "# Calculate start date by subtracting days_until_previous_thursday and setting time to 00:00\n",
-    "start_date = today - timedelta(days=days_until_previous_thursday, hours=today.hour, minutes=today.minute,\n",
-    "                               seconds=today.second, microseconds=today.microsecond)\n",
-    "# Calculate end date by adding 7 days to the start date\n",
-    "end_date = start_date + timedelta(days=7)\n",
+    "# Arb block time is .3 seconds\n",
+    "ARB_CHAIN_BLOCK_TIME = 0.3\n",
     "\n",
-    "start_ts = int(start_date.timestamp())\n",
-    "end_ts = int(end_date.timestamp())\n",
-    "\n",
-    "\n",
+    "block_now = web3.eth.block_number\n",
+    "# Given Arb block time, we want to look back 2 weeks:\n",
+    "block_2_weeks_ago = block_now - (2 * 7 * 24 * 60 * 60 / ARB_CHAIN_BLOCK_TIME)\n",
     "# Fetch all the data from the balancer subgraph\n",
     "def make_gql_client(url: str) -> Optional[Client]:\n",
     "    transport = RequestsHTTPTransport(url=url, retries=3)\n",
@@ -86,14 +85,14 @@
     "    )\n",
     "\n",
     "\n",
-    "def get_balancer_pool_snapshots() -> Optional[List[Dict]]:\n",
+    "def get_balancer_pool_snapshots(block: int) -> Optional[List[Dict]]:\n",
     "    client = make_gql_client(BALANCER_GRAPH_URL)\n",
     "    all_pools = []\n",
-    "    limit = 100\n",
+    "    limit = 500\n",
     "    offset = 0\n",
     "    while True:\n",
     "        result = client.execute(\n",
-    "            gql(POOLS_SNAPSHOTS_QUERY.format(first=limit, skip=offset, start_ts=start_ts, end_ts=end_ts)))\n",
+    "            gql(POOLS_SNAPSHOTS_QUERY.format(first=limit, skip=offset, block=block)))\n",
     "        all_pools.extend(result['poolSnapshots'])\n",
     "        offset += limit\n",
     "        if len(result['poolSnapshots']) < limit - 1:\n",
@@ -101,10 +100,15 @@
     "    return all_pools\n",
     "\n",
     "\n",
-    "pool_snapshots = get_balancer_pool_snapshots()"
+    "pool_snapshots_now = get_balancer_pool_snapshots(web3.eth.block_number)\n",
+    "pool_snapshots_2_weeks_ago = get_balancer_pool_snapshots(int(block_2_weeks_ago))"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-10T15:31:32.680133Z",
+     "start_time": "2023-08-10T15:31:29.332876Z"
+    }
    },
    "id": "e1e0b8b90f62234c"
   }
